--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workbench/LSWorkbenchViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workbench/LSWorkbenchViewController.xib
@@ -41,7 +41,7 @@
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0iT-ZT-KJS">
-                            <rect key="frame" x="10" y="138" width="373" height="115.33333333333331"/>
+                            <rect key="frame" x="10" y="138" width="373" height="195.33333333333337"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kdV-Ea-h94">
                                     <rect key="frame" x="10" y="11" width="2" height="13"/>
@@ -126,7 +126,7 @@
                                         <action selector="jumpUserquery:" destination="-1" eventType="touchUpInside" id="Ed3-qh-h64"/>
                                     </connections>
                                 </button>
-                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IqP-be-45g">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IqP-be-45g">
                                     <rect key="frame" x="0.0" y="115.33333333333334" width="93.333333333333329" height="80"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="技师排位" imagePlacement="top" imagePadding="5">
@@ -144,7 +144,7 @@
                                         <action selector="jumpJsRank:" destination="-1" eventType="touchUpInside" id="2oB-iy-gtj"/>
                                     </connections>
                                 </button>
-                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yut-hf-uw4">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yut-hf-uw4">
                                     <rect key="frame" x="93.333333333333343" y="115.33333333333334" width="93.333333333333343" height="80"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="工单汇总" imagePlacement="top" imagePadding="5">
@@ -185,7 +185,8 @@
                                 <constraint firstItem="yut-hf-uw4" firstAttribute="centerX" secondItem="udG-46-NVq" secondAttribute="centerX" id="gSi-sF-Zjj"/>
                                 <constraint firstItem="AcR-9Y-UIW" firstAttribute="top" secondItem="zhu-ps-yM3" secondAttribute="bottom" constant="10" id="lvE-f5-Yf9"/>
                                 <constraint firstItem="Gc2-B4-VNq" firstAttribute="leading" secondItem="udG-46-NVq" secondAttribute="trailing" id="ovz-Ob-dWJ"/>
-                                <constraint firstAttribute="bottom" secondItem="IqP-be-45g" secondAttribute="top" id="sSW-O7-hQE"/>
+                                <constraint firstAttribute="bottom" secondItem="yut-hf-uw4" secondAttribute="bottom" id="rGm-BL-248"/>
+                                <constraint firstAttribute="bottom" secondItem="IqP-be-45g" secondAttribute="bottom" id="sSW-O7-hQE"/>
                                 <constraint firstItem="kdV-Ea-h94" firstAttribute="top" secondItem="0iT-ZT-KJS" secondAttribute="top" constant="11" id="t64-rc-ach"/>
                                 <constraint firstItem="5bu-zF-job" firstAttribute="centerY" secondItem="AcR-9Y-UIW" secondAttribute="centerY" id="xJk-uA-b96"/>
                                 <constraint firstItem="IqP-be-45g" firstAttribute="top" secondItem="AcR-9Y-UIW" secondAttribute="bottom" id="xdi-PT-EHt"/>
@@ -206,7 +207,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J3T-O6-zBu">
-                            <rect key="frame" x="10" y="263.33333333333331" width="373" height="125"/>
+                            <rect key="frame" x="10" y="343.33333333333331" width="373" height="125"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EyG-KW-1F0">
                                     <rect key="frame" x="10" y="11" width="2" height="13"/>
@@ -287,7 +288,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pta-8b-l6W">
-                            <rect key="frame" x="10" y="398.33333333333331" width="373" height="124.99999999999994"/>
+                            <rect key="frame" x="10" y="478.33333333333326" width="373" height="125"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFE-mo-HGR">
                                     <rect key="frame" x="10" y="11" width="2" height="13"/>
@@ -304,7 +305,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="392-MO-IgA">
-                                    <rect key="frame" x="0.0" y="35.333333333333378" width="93.333333333333329" height="79.666666666666686"/>
+                                    <rect key="frame" x="0.0" y="35.333333333333321" width="93.333333333333329" height="79.666666666666686"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="员工打卡" imagePlacement="top" imagePadding="5">
                                         <attributedString key="attributedTitle">
@@ -321,7 +322,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3k-3i-IwB">
-                                    <rect key="frame" x="93.333333333333343" y="35.333333333333378" width="93.333333333333343" height="79.666666666666686"/>
+                                    <rect key="frame" x="93.333333333333343" y="35.333333333333321" width="93.333333333333343" height="79.666666666666686"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="员工请假" imagePlacement="top" imagePadding="5">
                                         <attributedString key="attributedTitle">
@@ -378,7 +379,6 @@
                         <constraint firstAttribute="trailing" secondItem="z6O-VD-Gcl" secondAttribute="trailing" id="3qk-C1-8Fk"/>
                         <constraint firstAttribute="trailing" secondItem="J3T-O6-zBu" secondAttribute="trailing" constant="10" id="56Z-QR-46H"/>
                         <constraint firstAttribute="trailing" secondItem="pta-8b-l6W" secondAttribute="trailing" constant="10" id="Ay2-Cc-6e1"/>
-                        <constraint firstItem="J3T-O6-zBu" firstAttribute="top" secondItem="0iT-ZT-KJS" secondAttribute="bottom" constant="10" id="FFx-9e-lvB"/>
                         <constraint firstItem="z6O-VD-Gcl" firstAttribute="centerX" secondItem="Se5-Jb-3WA" secondAttribute="centerX" id="HBc-PA-tNf"/>
                         <constraint firstItem="pta-8b-l6W" firstAttribute="leading" secondItem="Se5-Jb-3WA" secondAttribute="leading" constant="10" id="IxF-LC-hKp"/>
                         <constraint firstItem="0iT-ZT-KJS" firstAttribute="top" secondItem="z6O-VD-Gcl" secondAttribute="bottom" constant="10" id="KRi-Rj-4ur"/>
@@ -390,6 +390,7 @@
                         <constraint firstItem="EGP-02-ht1" firstAttribute="leading" secondItem="Se5-Jb-3WA" secondAttribute="leading" constant="27" id="tmz-y9-fdP"/>
                         <constraint firstItem="J3T-O6-zBu" firstAttribute="leading" secondItem="Se5-Jb-3WA" secondAttribute="leading" constant="10" id="uSi-0D-bFs"/>
                         <constraint firstItem="EGP-02-ht1" firstAttribute="bottom" secondItem="z6O-VD-Gcl" secondAttribute="bottom" constant="-49" id="vxh-Tm-daa"/>
+                        <constraint firstItem="J3T-O6-zBu" firstAttribute="top" secondItem="0iT-ZT-KJS" secondAttribute="bottom" constant="10" id="wbB-Qu-tsg"/>
                         <constraint firstAttribute="bottom" secondItem="pta-8b-l6W" secondAttribute="bottom" id="xyX-Rp-Gib"/>
                     </constraints>
                 </scrollView>
