--- a/CloudEnjoy/CloudEnjoy/Modules/Alert/AlertStoryboard.storyboard
+++ b/CloudEnjoy/CloudEnjoy/Modules/Alert/AlertStoryboard.storyboard
@@ -873,36 +873,17 @@
                                         <rect key="frame" x="14.999999999999998" y="13.000000000000002" width="16.333333333333329" height="16.666666666666671"/>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入推荐人" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vdv-Ne-M5F">
-                                        <rect key="frame" x="36.333333333333343" y="10.666666666666663" width="257.66666666666663" height="21.333333333333329"/>
+                                        <rect key="frame" x="36.333333333333343" y="10.666666666666663" width="70" height="21.333333333333329"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QMU-d7-IcT">
-                                        <rect key="frame" x="299" y="0.0" width="46" height="43"/>
-                                        <color key="backgroundColor" red="0.92549019610000005" green="0.99607843139999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="46" id="7Th-6Q-4ij"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="搜索">
-                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="searchTextAction:" destination="iiV-e2-0Nk" eventType="touchUpInside" id="grS-cn-1fZ"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="vdv-Ne-M5F" firstAttribute="centerY" secondItem="o4x-3c-1fX" secondAttribute="centerY" id="9iy-Ng-Kvy"/>
                                     <constraint firstItem="vdv-Ne-M5F" firstAttribute="leading" secondItem="Gcd-Gb-KjO" secondAttribute="trailing" constant="5" id="BO8-IR-Ecd"/>
-                                    <constraint firstItem="QMU-d7-IcT" firstAttribute="top" secondItem="o4x-3c-1fX" secondAttribute="top" id="Doe-vG-gFS"/>
-                                    <constraint firstAttribute="bottom" secondItem="QMU-d7-IcT" secondAttribute="bottom" id="IDM-Et-E1k"/>
                                     <constraint firstAttribute="height" constant="43" id="QeZ-bZ-TQJ"/>
-                                    <constraint firstAttribute="trailing" secondItem="QMU-d7-IcT" secondAttribute="trailing" id="ZZt-us-2lu"/>
-                                    <constraint firstItem="QMU-d7-IcT" firstAttribute="leading" secondItem="vdv-Ne-M5F" secondAttribute="trailing" constant="5" id="jEZ-6l-7Bs"/>
                                     <constraint firstItem="Gcd-Gb-KjO" firstAttribute="leading" secondItem="o4x-3c-1fX" secondAttribute="leading" constant="15" id="piS-pl-9aD"/>
                                     <constraint firstItem="Gcd-Gb-KjO" firstAttribute="centerY" secondItem="o4x-3c-1fX" secondAttribute="centerY" id="ucu-u3-GUo"/>
                                 </constraints>
