--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/JsRank(技师排位)/View/LSJsRankTableViewCell.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/JsRank(技师排位)/View/LSJsRankTableViewCell.xib
@@ -1,21 +1,139 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="LSJsRankTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="51" id="KGk-i7-Jjw" customClass="LSJsRankTableViewCell" customModule="CloudEnjoy" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="471" height="51"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="471" height="51"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F8m-RD-Mpn">
+                        <rect key="frame" x="0.0" y="0.0" width="471" height="51"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KLd-No-Nje">
+                                <rect key="frame" x="13" y="10" width="24" height="24"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3A7-gg-vDS">
+                                        <rect key="frame" x="7.666666666666667" y="3.6666666666666661" width="8.6666666666666643" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="3A7-gg-vDS" firstAttribute="centerX" secondItem="KLd-No-Nje" secondAttribute="centerX" id="FRM-pc-Wbj"/>
+                                    <constraint firstAttribute="width" constant="24" id="KF4-aD-6Dq"/>
+                                    <constraint firstItem="3A7-gg-vDS" firstAttribute="centerY" secondItem="KLd-No-Nje" secondAttribute="centerY" id="S4g-er-JOT"/>
+                                    <constraint firstAttribute="height" constant="24" id="lQW-hR-uJH"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="早班" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXM-r6-X0R">
+                                <rect key="frame" x="45" y="10" width="38" height="24"/>
+                                <color key="backgroundColor" red="0.17254901959999999" green="0.72156862749999995" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="ZYH-IQ-PiQ"/>
+                                    <constraint firstAttribute="width" constant="38" id="xvC-db-mSy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1001-张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99T-3P-Vfo">
+                                <rect key="frame" x="88" y="13.666666666666664" width="67" height="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1001-张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Llf-Ee-KY0">
+                                <rect key="frame" x="160" y="14" width="61" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.56078431370000004" green="0.56078431370000004" blue="0.56078431370000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Z0-58-Cdf">
+                                <rect key="frame" x="407" y="18" width="8" height="8"/>
+                                <color key="backgroundColor" red="1" green="0.56862745100000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="8" id="j1R-s6-4VA"/>
+                                    <constraint firstAttribute="width" constant="8" id="tvQ-nV-jfB"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="空闲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZM-D7-1Hw">
+                                <rect key="frame" x="420" y="13.666666666666664" width="29" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="RZM-D7-1Hw" firstAttribute="leading" secondItem="4Z0-58-Cdf" secondAttribute="trailing" constant="5" id="IDZ-90-QO5"/>
+                            <constraint firstItem="RZM-D7-1Hw" firstAttribute="centerY" secondItem="4Z0-58-Cdf" secondAttribute="centerY" id="LsL-Dw-U0x"/>
+                            <constraint firstItem="99T-3P-Vfo" firstAttribute="centerY" secondItem="UXM-r6-X0R" secondAttribute="centerY" id="Q6e-Sf-qab"/>
+                            <constraint firstItem="UXM-r6-X0R" firstAttribute="leading" secondItem="KLd-No-Nje" secondAttribute="trailing" constant="8" id="Wbf-Lm-DuE"/>
+                            <constraint firstItem="KLd-No-Nje" firstAttribute="leading" secondItem="F8m-RD-Mpn" secondAttribute="leading" constant="13" id="XGU-Uw-j0v"/>
+                            <constraint firstItem="UXM-r6-X0R" firstAttribute="centerY" secondItem="KLd-No-Nje" secondAttribute="centerY" id="gHM-LQ-1eK"/>
+                            <constraint firstItem="KLd-No-Nje" firstAttribute="top" secondItem="F8m-RD-Mpn" secondAttribute="top" constant="10" id="lN4-W0-ONy"/>
+                            <constraint firstItem="Llf-Ee-KY0" firstAttribute="leading" secondItem="99T-3P-Vfo" secondAttribute="trailing" constant="5" id="mii-OC-jo2"/>
+                            <constraint firstItem="RZM-D7-1Hw" firstAttribute="centerY" secondItem="UXM-r6-X0R" secondAttribute="centerY" id="oSP-NU-Dfu"/>
+                            <constraint firstItem="99T-3P-Vfo" firstAttribute="leading" secondItem="UXM-r6-X0R" secondAttribute="trailing" constant="5" id="p9d-eG-ZVn"/>
+                            <constraint firstItem="Llf-Ee-KY0" firstAttribute="centerY" secondItem="99T-3P-Vfo" secondAttribute="centerY" id="vJs-KG-rUT"/>
+                            <constraint firstAttribute="trailing" secondItem="RZM-D7-1Hw" secondAttribute="trailing" constant="22" id="zs3-Mf-PKu"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="F8m-RD-Mpn" secondAttribute="bottom" id="AsH-Ek-Qog"/>
+                    <constraint firstItem="F8m-RD-Mpn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OTL-g3-0SM"/>
+                    <constraint firstItem="F8m-RD-Mpn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="q5T-hp-BhG"/>
+                    <constraint firstAttribute="trailing" secondItem="F8m-RD-Mpn" secondAttribute="trailing" id="swm-O4-vSc"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="jobLab" destination="Llf-Ee-KY0" id="rIo-fs-aOc"/>
+                <outlet property="jobStateLab" destination="RZM-D7-1Hw" id="iWp-zL-S0A"/>
+                <outlet property="nameLab" destination="99T-3P-Vfo" id="BUt-sL-cc4"/>
+                <outlet property="rankLab" destination="3A7-gg-vDS" id="WTd-zl-pE6"/>
+                <outlet property="rankView" destination="KLd-No-Nje" id="2n2-d5-ATp"/>
+                <outlet property="shiftLab" destination="UXM-r6-X0R" id="n4z-3w-HcM"/>
+            </connections>
+            <point key="canvasLocation" x="254.19847328244273" y="22.887323943661972"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
