--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/JsRank(技师排位)/LSJsRankViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/JsRank(技师排位)/LSJsRankViewController.xib
@@ -52,8 +52,8 @@
                         <constraint firstAttribute="height" constant="43" id="zhA-30-bfH"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t5W-HA-krm">
-                    <rect key="frame" x="0.0" y="104" width="393" height="120"/>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t5W-HA-krm">
+                    <rect key="frame" x="0.0" y="104" width="393" height="0.0"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前我的排位" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErG-XT-FjK">
                             <rect key="frame" x="14" y="11.666666666666671" width="79.666666666666671" height="15.666666666666664"/>
@@ -69,7 +69,7 @@
                                 <constraint firstAttribute="height" constant="13" id="rni-gD-I6W"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w4Q-P1-rys">
+                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w4Q-P1-rys">
                             <rect key="frame" x="10" y="37" width="373" height="83"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jPn-hu-q4f">
@@ -139,7 +139,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="钟数：上班:8h，加班:1h，迟到:1'，早退:10'" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7i-zH-5MP">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="钟数：上班:8h，加班:1h，迟到:1'，早退:10'" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7i-zH-5MP">
                                     <rect key="frame" x="15" y="52" width="343" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="SV9-hC-17P"/>
@@ -184,12 +184,12 @@
                         <constraint firstAttribute="trailing" secondItem="w4Q-P1-rys" secondAttribute="trailing" constant="10" id="HLy-mG-bA8"/>
                         <constraint firstAttribute="bottom" secondItem="w4Q-P1-rys" secondAttribute="bottom" id="aMe-rN-t3G"/>
                         <constraint firstItem="0p9-Et-quw" firstAttribute="leading" secondItem="t5W-HA-krm" secondAttribute="leading" constant="10" id="atd-S1-YRd"/>
-                        <constraint firstAttribute="height" constant="120" id="cx9-Sw-B2b"/>
+                        <constraint firstAttribute="height" id="cx9-Sw-B2b"/>
                         <constraint firstItem="ErG-XT-FjK" firstAttribute="centerY" secondItem="0p9-Et-quw" secondAttribute="centerY" id="k4H-tr-XYM"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="w0N-Lt-urJ">
-                    <rect key="frame" x="0.0" y="224" width="393" height="628"/>
+                    <rect key="frame" x="0.0" y="104" width="393" height="748"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
