--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workorder(我的工单)/View/LSOrderTableViewCell.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workorder(我的工单)/View/LSOrderTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,15 +18,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="395" height="98"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PEe-qr-NVc">
-                        <rect key="frame" x="15" y="10" width="37" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Lbp-1g-FZV"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
-                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyw-7K-g71">
                         <rect key="frame" x="339" y="10" width="41" height="22"/>
                         <subviews>
@@ -77,8 +69,44 @@
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJD-5F-LrK">
+                        <rect key="frame" x="15" y="5.6666666666666679" width="25" height="30.000000000000004"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="排序背景" translatesAutoresizingMaskIntoConstraints="NO" id="2h1-gb-pO3">
+                                <rect key="frame" x="0.0" y="0.0" width="25" height="30"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pw-qi-G37">
+                                <rect key="frame" x="5" y="6" width="15" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2Pw-qi-G37" firstAttribute="centerY" secondItem="pJD-5F-LrK" secondAttribute="centerY" id="2lG-E7-FSO"/>
+                            <constraint firstAttribute="trailing" secondItem="2h1-gb-pO3" secondAttribute="trailing" id="9YI-f5-kEK"/>
+                            <constraint firstItem="2h1-gb-pO3" firstAttribute="top" secondItem="pJD-5F-LrK" secondAttribute="top" id="GHb-oO-eWE"/>
+                            <constraint firstAttribute="bottom" secondItem="2h1-gb-pO3" secondAttribute="bottom" id="Kei-bj-HiP"/>
+                            <constraint firstItem="2h1-gb-pO3" firstAttribute="leading" secondItem="pJD-5F-LrK" secondAttribute="leading" id="bq6-4K-HkO"/>
+                            <constraint firstAttribute="trailing" secondItem="2Pw-qi-G37" secondAttribute="trailing" constant="5" id="eV2-5K-dpv"/>
+                            <constraint firstAttribute="height" constant="30" id="gUY-2q-iGf"/>
+                            <constraint firstItem="2Pw-qi-G37" firstAttribute="leading" secondItem="pJD-5F-LrK" secondAttribute="leading" constant="5" id="njT-Jt-tuq"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PEe-qr-NVc">
+                        <rect key="frame" x="50" y="10" width="37" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Lbp-1g-FZV"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="pJD-5F-LrK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="0eU-vR-6mQ"/>
+                    <constraint firstItem="PEe-qr-NVc" firstAttribute="leading" secondItem="pJD-5F-LrK" secondAttribute="trailing" constant="10" id="8ky-aq-glo"/>
                     <constraint firstItem="PEe-qr-NVc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Cgz-Zf-paT"/>
                     <constraint firstItem="wG4-4d-mNc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="N0l-kz-YhL"/>
                     <constraint firstItem="hLq-eZ-KR2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="NlI-rm-h9k"/>
@@ -86,9 +114,9 @@
                     <constraint firstItem="MRa-DU-428" firstAttribute="centerY" secondItem="wG4-4d-mNc" secondAttribute="centerY" id="T13-8R-5lt"/>
                     <constraint firstAttribute="trailing" secondItem="MRa-DU-428" secondAttribute="trailing" constant="15" id="aVS-S5-usK"/>
                     <constraint firstItem="hLq-eZ-KR2" firstAttribute="top" secondItem="wG4-4d-mNc" secondAttribute="bottom" constant="2" id="bM2-9L-11t"/>
-                    <constraint firstItem="PEe-qr-NVc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="lYW-SO-gEx"/>
                     <constraint firstAttribute="trailing" secondItem="wyw-7K-g71" secondAttribute="trailing" constant="15" id="qBu-js-BDu"/>
                     <constraint firstItem="wyw-7K-g71" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="qXH-CS-olp"/>
+                    <constraint firstItem="PEe-qr-NVc" firstAttribute="centerY" secondItem="pJD-5F-LrK" secondAttribute="centerY" id="t8c-bm-lUd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -96,6 +124,7 @@
                 <outlet property="amtLab" destination="wG4-4d-mNc" id="bss-Fo-drG"/>
                 <outlet property="createTimeLab" destination="hLq-eZ-KR2" id="T85-Q0-k2D"/>
                 <outlet property="royaltyLab" destination="MRa-DU-428" id="bNA-La-9S6"/>
+                <outlet property="sortIndexLab" destination="2Pw-qi-G37" id="vV4-dF-JGH"/>
                 <outlet property="statusLab" destination="9Ke-y2-Vh2" id="USf-c7-3kS"/>
                 <outlet property="statusView" destination="wyw-7K-g71" id="nRQ-EL-WJ3"/>
                 <outlet property="titleLab" destination="PEe-qr-NVc" id="nft-DB-Aqs"/>
@@ -103,4 +132,10 @@
             <point key="canvasLocation" x="196.18320610687022" y="47.183098591549296"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="排序背景" width="25" height="25"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
