--- a/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSAddClockViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSAddClockViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,8 +11,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSAddClockViewController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
-                <outlet property="bedNoLab" destination="cgl-bq-efm" id="6bM-Pr-EA2"/>
-                <outlet property="bedNoTitleLab" destination="b0S-V8-jx7" id="S59-lV-qqW"/>
                 <outlet property="newProjectDurationLab" destination="wld-V8-Vmi" id="8u3-AV-yFa"/>
                 <outlet property="newProjectNameLab" destination="78q-gH-f8W" id="e52-IK-tQb"/>
                 <outlet property="newProjectPicIamgeView" destination="4IX-2Q-FTE" id="KPJ-7x-o7C"/>
@@ -26,6 +24,7 @@
                 <outlet property="refNameLab" destination="eNy-NJ-SnG" id="vTe-dn-eAn"/>
                 <outlet property="refNameView" destination="hJ0-CI-IE8" id="fab-xu-Z6E"/>
                 <outlet property="roomNameLab" destination="UAd-OL-EMI" id="VRR-4n-VeK"/>
+                <outlet property="roomTitleLab" destination="yll-fz-pok" id="Uh2-t0-dqj"/>
                 <outlet property="selectedProjectView" destination="MMq-Lo-LAt" id="EOZ-QN-1Lu"/>
                 <outlet property="subtractBtn" destination="obz-8R-nAG" id="PbV-fI-FMQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -85,7 +84,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BDh-io-kkW">
-                    <rect key="frame" x="10" y="69" width="373" height="479"/>
+                    <rect key="frame" x="10" y="69" width="373" height="434"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kUL-So-eOu">
                             <rect key="frame" x="18" y="27" width="105" height="105"/>
@@ -110,7 +109,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥165.66" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ash-g0-Kq2">
-                            <rect key="frame" x="141" y="55" width="60" height="21"/>
+                            <rect key="frame" x="141" y="55" width="61.666666666666657" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="ZD1-Kr-Fmz"/>
                             </constraints>
@@ -119,7 +118,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/60分钟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1RH-gf-T8C">
-                            <rect key="frame" x="201" y="55" width="51" height="21"/>
+                            <rect key="frame" x="202.66666666666666" y="55" width="52.666666666666657" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="idz-qs-mZK"/>
                             </constraints>
@@ -161,42 +160,6 @@
                                 <constraint firstAttribute="height" constant="45" id="aTp-kg-wrs"/>
                                 <constraint firstItem="yll-fz-pok" firstAttribute="leading" secondItem="gqH-Je-1Tg" secondAttribute="leading" constant="20" id="qGS-HA-NC0"/>
                                 <constraint firstItem="BU5-tO-jc5" firstAttribute="leading" secondItem="gqH-Je-1Tg" secondAttribute="leading" constant="19" id="weX-dV-BnV"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FMn-QZ-fFe">
-                            <rect key="frame" x="10" y="344" width="353" height="45"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pGx-S1-org">
-                                    <rect key="frame" x="19" y="-1" width="315" height="1"/>
-                                    <color key="backgroundColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="1" id="lie-2s-0te"/>
-                                    </constraints>
-                                </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="床位号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0S-V8-jx7">
-                                    <rect key="frame" x="20" y="12.666666666666687" width="42" height="19.666666666666671"/>
-                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                    <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgl-bq-efm">
-                                    <rect key="frame" x="109" y="22.666666666666686" width="204" height="0.0"/>
-                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="cgl-bq-efm" secondAttribute="trailing" constant="40" id="6Sf-yj-o4Y"/>
-                                <constraint firstAttribute="top" secondItem="pGx-S1-org" secondAttribute="bottom" id="E9R-PK-vlp"/>
-                                <constraint firstItem="pGx-S1-org" firstAttribute="leading" secondItem="FMn-QZ-fFe" secondAttribute="leading" constant="19" id="LvW-cp-vfO"/>
-                                <constraint firstItem="cgl-bq-efm" firstAttribute="centerY" secondItem="FMn-QZ-fFe" secondAttribute="centerY" id="O4B-PP-FyX"/>
-                                <constraint firstAttribute="height" constant="45" id="Uwl-BP-37i"/>
-                                <constraint firstAttribute="trailing" secondItem="pGx-S1-org" secondAttribute="trailing" constant="19" id="YaA-fE-HFu"/>
-                                <constraint firstItem="cgl-bq-efm" firstAttribute="leading" secondItem="FMn-QZ-fFe" secondAttribute="leading" constant="109" id="Z1D-lh-yyB"/>
-                                <constraint firstItem="b0S-V8-jx7" firstAttribute="leading" secondItem="FMn-QZ-fFe" secondAttribute="leading" constant="20" id="oOh-fh-T7r"/>
-                                <constraint firstItem="b0S-V8-jx7" firstAttribute="centerY" secondItem="FMn-QZ-fFe" secondAttribute="centerY" id="vSP-K4-FAV"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="原项目" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVs-Pn-mNN">
@@ -251,7 +214,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥165.66" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIy-np-ann">
-                                    <rect key="frame" x="141" y="28" width="60" height="21"/>
+                                    <rect key="frame" x="141" y="28" width="61.666666666666657" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="4pb-S1-8qw"/>
                                     </constraints>
@@ -260,7 +223,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/60分钟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wld-V8-Vmi">
-                                    <rect key="frame" x="201" y="28" width="51" height="21"/>
+                                    <rect key="frame" x="202.66666666666666" y="28" width="52.666666666666657" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="BZo-ra-osG"/>
                                     </constraints>
@@ -288,7 +251,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hJ0-CI-IE8">
-                            <rect key="frame" x="10" y="434" width="353" height="45"/>
+                            <rect key="frame" x="10" y="389" width="353" height="45"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tC8-Hz-Sde">
                                     <rect key="frame" x="19" y="0.0" width="315" height="1"/>
@@ -298,19 +261,19 @@
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推荐人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CpW-v2-Wjt">
-                                    <rect key="frame" x="20" y="12.666666666666631" width="42" height="19.666666666666671"/>
+                                    <rect key="frame" x="20" y="12.666666666666687" width="42" height="19.666666666666671"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                     <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNy-NJ-SnG">
-                                    <rect key="frame" x="109" y="22.666666666666629" width="204" height="0.0"/>
+                                    <rect key="frame" x="109" y="22.666666666666686" width="204" height="0.0"/>
                                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="矩形 copy 6(1)" translatesAutoresizingMaskIntoConstraints="NO" id="cE9-21-PBS">
-                                    <rect key="frame" x="319.33333333333331" y="17.333333333333371" width="10.666666666666686" height="10.666666666666664"/>
+                                    <rect key="frame" x="319.33333333333331" y="17.333333333333314" width="10.666666666666686" height="10.666666666666664"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -329,7 +292,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5DS-fo-7oq">
-                            <rect key="frame" x="10" y="389" width="353" height="45"/>
+                            <rect key="frame" x="10" y="344" width="353" height="45"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gQ6-lw-W2E">
                                     <rect key="frame" x="19" y="-1" width="315" height="1"/>
@@ -409,7 +372,6 @@
                         <constraint firstItem="hJ0-CI-IE8" firstAttribute="leading" secondItem="BDh-io-kkW" secondAttribute="leading" constant="10" id="Fj5-jB-0YH"/>
                         <constraint firstItem="1RH-gf-T8C" firstAttribute="leading" secondItem="Ash-g0-Kq2" secondAttribute="trailing" id="GZ6-Gl-Oke"/>
                         <constraint firstItem="LkU-QI-0Gs" firstAttribute="top" secondItem="Xwb-Q8-JRH" secondAttribute="bottom" constant="7" id="I4Q-2T-bcm"/>
-                        <constraint firstItem="5DS-fo-7oq" firstAttribute="top" secondItem="FMn-QZ-fFe" secondAttribute="bottom" id="IAi-hD-g15"/>
                         <constraint firstItem="MMq-Lo-LAt" firstAttribute="top" secondItem="LkU-QI-0Gs" secondAttribute="bottom" constant="7" id="O6N-DG-evk"/>
                         <constraint firstItem="gqH-Je-1Tg" firstAttribute="leading" secondItem="BDh-io-kkW" secondAttribute="leading" constant="10" id="SD7-DO-ufe"/>
                         <constraint firstItem="4BI-UX-kTK" firstAttribute="top" secondItem="kUL-So-eOu" secondAttribute="top" constant="1" id="SEm-VI-hiY"/>
@@ -419,10 +381,8 @@
                         <constraint firstItem="Xwb-Q8-JRH" firstAttribute="top" secondItem="kUL-So-eOu" secondAttribute="bottom" constant="14" id="bb4-ox-0i6"/>
                         <constraint firstItem="kUL-So-eOu" firstAttribute="top" secondItem="WVs-Pn-mNN" secondAttribute="bottom" constant="7" id="bku-aY-nX3"/>
                         <constraint firstItem="kUL-So-eOu" firstAttribute="leading" secondItem="BDh-io-kkW" secondAttribute="leading" constant="18" id="cFF-Lg-bLF"/>
+                        <constraint firstItem="5DS-fo-7oq" firstAttribute="top" secondItem="gqH-Je-1Tg" secondAttribute="bottom" id="dLP-ZJ-ASa"/>
                         <constraint firstAttribute="trailing" secondItem="gqH-Je-1Tg" secondAttribute="trailing" constant="10" id="eDg-0P-SIH"/>
-                        <constraint firstAttribute="trailing" secondItem="FMn-QZ-fFe" secondAttribute="trailing" constant="10" id="fDO-kA-qQO"/>
-                        <constraint firstItem="FMn-QZ-fFe" firstAttribute="top" secondItem="gqH-Je-1Tg" secondAttribute="bottom" id="g5o-sP-j2v"/>
-                        <constraint firstItem="FMn-QZ-fFe" firstAttribute="leading" secondItem="BDh-io-kkW" secondAttribute="leading" constant="10" id="mfr-tM-Vud"/>
                         <constraint firstItem="1RH-gf-T8C" firstAttribute="centerY" secondItem="Ash-g0-Kq2" secondAttribute="centerY" id="mmV-m7-QNo"/>
                         <constraint firstAttribute="trailing" secondItem="5DS-fo-7oq" secondAttribute="trailing" constant="10" id="mtv-2C-Fb1"/>
                         <constraint firstAttribute="trailing" secondItem="hJ0-CI-IE8" secondAttribute="trailing" constant="10" id="uIK-7Z-8Gc"/>
