--- a/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSRejectProjectViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSRejectProjectViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,8 +11,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSRejectProjectViewController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
-                <outlet property="bedNameLab" destination="WC4-UY-0Pu" id="FFU-Gk-CZY"/>
-                <outlet property="bedTitle" destination="Kkj-ru-zDZ" id="dLk-vY-BAb"/>
                 <outlet property="clockDurationLab" destination="JyT-C3-94C" id="diG-EG-n1B"/>
                 <outlet property="clockDurationView" destination="GRg-bl-efN" id="dmQ-Ro-kOG"/>
                 <outlet property="clockTypeLab" destination="4UO-mE-0jE" id="ACE-wr-X8C"/>
@@ -21,6 +19,7 @@
                 <outlet property="rejectMarkTextField" destination="xZb-jp-lXw" id="rL4-Zm-4pb"/>
                 <outlet property="remarkView" destination="VMv-IC-LU4" id="KNJ-aF-u6N"/>
                 <outlet property="roomNameLab" destination="mUh-3j-JeG" id="YoT-XF-mfo"/>
+                <outlet property="roomTitleLab" destination="Q4h-Ai-FdJ" id="fBO-Ti-OEc"/>
                 <outlet property="serviceStatusLab" destination="sVF-HV-PJD" id="UBx-pm-3ee"/>
                 <outlet property="upClockTimeLab" destination="6WA-aj-cED" id="iTu-xH-6lX"/>
                 <outlet property="upClockView" destination="YGC-wG-XQj" id="8y3-UX-5KH"/>
@@ -33,10 +32,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QtS-nF-nfG">
-                    <rect key="frame" x="10" y="10" width="355" height="594"/>
+                    <rect key="frame" x="10" y="10" width="355" height="560"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IL8-fB-spF">
-                            <rect key="frame" x="0.0" y="0.0" width="355" height="405"/>
+                            <rect key="frame" x="0.0" y="0.0" width="355" height="360"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cV9-Ks-Hra">
                                     <rect key="frame" x="0.0" y="0.0" width="355" height="45"/>
@@ -74,44 +73,8 @@
                                         <constraint firstItem="1CB-uM-Y4S" firstAttribute="leading" secondItem="cV9-Ks-Hra" secondAttribute="leading" constant="19" id="njc-BX-ozO"/>
                                     </constraints>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1oy-OW-LSr">
-                                    <rect key="frame" x="0.0" y="45" width="355" height="45"/>
-                                    <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Udy-hh-uT0">
-                                            <rect key="frame" x="19" y="44" width="317" height="1"/>
-                                            <color key="backgroundColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="1" id="XO1-vc-H9h"/>
-                                            </constraints>
-                                        </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="床位号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kkj-ru-zDZ">
-                                            <rect key="frame" x="20" y="12.666666666666673" width="42" height="19.666666666666671"/>
-                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                            <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WC4-UY-0Pu">
-                                            <rect key="frame" x="109" y="22.666666666666671" width="206" height="0.0"/>
-                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstItem="WC4-UY-0Pu" firstAttribute="centerY" secondItem="1oy-OW-LSr" secondAttribute="centerY" id="00F-Vt-wiD"/>
-                                        <constraint firstAttribute="height" constant="45" id="0CH-9Z-XUm"/>
-                                        <constraint firstItem="Kkj-ru-zDZ" firstAttribute="centerY" secondItem="1oy-OW-LSr" secondAttribute="centerY" id="C50-0W-Tee"/>
-                                        <constraint firstAttribute="trailing" secondItem="Udy-hh-uT0" secondAttribute="trailing" constant="19" id="Cw4-hC-lyv"/>
-                                        <constraint firstItem="Udy-hh-uT0" firstAttribute="leading" secondItem="1oy-OW-LSr" secondAttribute="leading" constant="19" id="NqW-Bf-NbE"/>
-                                        <constraint firstItem="Kkj-ru-zDZ" firstAttribute="leading" secondItem="1oy-OW-LSr" secondAttribute="leading" constant="20" id="fTX-Xh-iGH"/>
-                                        <constraint firstAttribute="bottom" secondItem="Udy-hh-uT0" secondAttribute="bottom" id="qhf-3S-OQj"/>
-                                        <constraint firstAttribute="trailing" secondItem="WC4-UY-0Pu" secondAttribute="trailing" constant="40" id="u69-Is-i7l"/>
-                                        <constraint firstItem="WC4-UY-0Pu" firstAttribute="leading" secondItem="1oy-OW-LSr" secondAttribute="leading" constant="109" id="x2M-AU-fnt"/>
-                                    </constraints>
-                                </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayN-NO-q8M">
-                                    <rect key="frame" x="0.0" y="90" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="45" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PYR-6q-jjc">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -147,7 +110,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tUn-aL-2tP">
-                                    <rect key="frame" x="0.0" y="135" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="90" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heo-eb-clG">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -157,13 +120,13 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技师名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YcP-jw-K2R">
-                                            <rect key="frame" x="20" y="12.666666666666659" width="56" height="19.666666666666671"/>
+                                            <rect key="frame" x="20" y="12.666666666666673" width="56" height="19.666666666666671"/>
                                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                             <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXc-RP-kfj">
-                                            <rect key="frame" x="109" y="22.666666666666657" width="206" height="0.0"/>
+                                            <rect key="frame" x="109" y="22.666666666666671" width="206" height="0.0"/>
                                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -183,7 +146,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VCg-Am-gQw">
-                                    <rect key="frame" x="0.0" y="180" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="135" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="94i-Y3-wrs">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -219,7 +182,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zda-TG-nbm">
-                                    <rect key="frame" x="0.0" y="225" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="180" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PS2-hd-5AG">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -235,7 +198,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sVF-HV-PJD">
-                                            <rect key="frame" x="109" y="22.666666666666686" width="206" height="0.0"/>
+                                            <rect key="frame" x="109" y="22.666666666666657" width="206" height="0.0"/>
                                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -255,7 +218,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YGC-wG-XQj">
-                                    <rect key="frame" x="0.0" y="270" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="225" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YZa-HF-Sz9">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -265,7 +228,7 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="上钟时间" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NhY-wq-gJ6">
-                                            <rect key="frame" x="20" y="12.666666666666687" width="56" height="19.666666666666671"/>
+                                            <rect key="frame" x="20" y="12.666666666666659" width="56" height="19.666666666666671"/>
                                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                             <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -291,7 +254,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GRg-bl-efN">
-                                    <rect key="frame" x="0.0" y="315" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="270" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v7d-qD-Bmf">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -327,7 +290,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-IC-LU4">
-                                    <rect key="frame" x="0.0" y="360" width="355" height="45"/>
+                                    <rect key="frame" x="0.0" y="315" width="355" height="45"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3dL-mY-7Ze">
                                             <rect key="frame" x="19" y="44" width="317" height="1"/>
@@ -379,7 +342,7 @@
                     </constraints>
                 </scrollView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZe-tf-JG6">
-                    <rect key="frame" x="10" y="614" width="168.66666666666666" height="43"/>
+                    <rect key="frame" x="10" y="580" width="168.66666666666666" height="43"/>
                     <color key="backgroundColor" red="0.87450980389999999" green="0.95686274510000002" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="1PU-bq-WLb"/>
@@ -406,7 +369,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5gM-yI-E7L">
-                    <rect key="frame" x="196.66666666666663" y="614" width="168.33333333333337" height="43"/>
+                    <rect key="frame" x="196.66666666666663" y="580" width="168.33333333333337" height="43"/>
                     <color key="backgroundColor" red="0.17254901959999999" green="0.72156862749999995" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="SGh-i9-qiD"/>
