--- a/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSServiceViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSServiceViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,10 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSServiceViewController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
-                <outlet property="bedNoLab" destination="XeM-Ha-7ih" id="Y5A-lC-Yo1"/>
-                <outlet property="bedTitleLab" destination="MgZ-AJ-N2I" id="4D8-b3-M30"/>
                 <outlet property="remarkTrxtField" destination="MlE-RU-e6y" id="ylQ-eS-gBq"/>
                 <outlet property="roomNameLab" destination="ron-mv-q1h" id="Iql-gj-D06"/>
+                <outlet property="roomTitleLab" destination="ZfA-55-AZI" id="ytI-Wv-fTU"/>
                 <outlet property="searchGoodsTextField" destination="ZBb-Zy-d3o" id="JTB-Xj-vDS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -120,7 +119,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yd3-4s-8of">
-                    <rect key="frame" x="0.0" y="620" width="393" height="135"/>
+                    <rect key="frame" x="0.0" y="665" width="393" height="90"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8B-KY-Dvi">
                             <rect key="frame" x="0.0" y="0.0" width="393" height="45"/>
@@ -148,44 +147,8 @@
                                 <constraint firstItem="ZfA-55-AZI" firstAttribute="centerY" secondItem="T8B-KY-Dvi" secondAttribute="centerY" id="xp7-Gr-tiP"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJc-lS-glS">
-                            <rect key="frame" x="0.0" y="45" width="393" height="45"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRG-ev-POe">
-                                    <rect key="frame" x="19" y="-1" width="355" height="1"/>
-                                    <color key="backgroundColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="1" id="eXf-7I-B4E"/>
-                                    </constraints>
-                                </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="床位号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgZ-AJ-N2I">
-                                    <rect key="frame" x="20" y="12.666666666666631" width="42" height="19.666666666666671"/>
-                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                    <color key="textColor" red="0.57254901960000004" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XeM-Ha-7ih">
-                                    <rect key="frame" x="109" y="22.666666666666629" width="244" height="0.0"/>
-                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstItem="XeM-Ha-7ih" firstAttribute="centerY" secondItem="xJc-lS-glS" secondAttribute="centerY" id="2RY-kb-eWZ"/>
-                                <constraint firstAttribute="trailing" secondItem="HRG-ev-POe" secondAttribute="trailing" constant="19" id="8gL-Dr-mum"/>
-                                <constraint firstItem="XeM-Ha-7ih" firstAttribute="leading" secondItem="xJc-lS-glS" secondAttribute="leading" constant="109" id="9W0-kc-Bkg"/>
-                                <constraint firstItem="MgZ-AJ-N2I" firstAttribute="centerY" secondItem="xJc-lS-glS" secondAttribute="centerY" id="Hea-cP-DfT"/>
-                                <constraint firstAttribute="height" constant="45" id="HpY-Q7-ZH3"/>
-                                <constraint firstAttribute="top" secondItem="HRG-ev-POe" secondAttribute="bottom" id="Phx-bR-ne7"/>
-                                <constraint firstItem="MgZ-AJ-N2I" firstAttribute="leading" secondItem="xJc-lS-glS" secondAttribute="leading" constant="20" id="T26-K1-nCb"/>
-                                <constraint firstAttribute="trailing" secondItem="XeM-Ha-7ih" secondAttribute="trailing" constant="40" id="dxP-il-WZa"/>
-                                <constraint firstItem="HRG-ev-POe" firstAttribute="leading" secondItem="xJc-lS-glS" secondAttribute="leading" constant="19" id="gle-iU-NBR"/>
-                            </constraints>
-                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2so-B9-7Zm">
-                            <rect key="frame" x="0.0" y="90" width="393" height="45"/>
+                            <rect key="frame" x="0.0" y="45" width="393" height="45"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lbe-6o-o6d">
                                     <rect key="frame" x="19" y="1" width="355" height="1"/>
@@ -222,16 +185,13 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="xJc-lS-glS" secondAttribute="trailing" id="A0D-s1-J6F"/>
-                        <constraint firstItem="2so-B9-7Zm" firstAttribute="top" secondItem="xJc-lS-glS" secondAttribute="bottom" id="JVY-B8-yxk"/>
-                        <constraint firstItem="xJc-lS-glS" firstAttribute="top" secondItem="T8B-KY-Dvi" secondAttribute="bottom" id="RDU-A4-XLL"/>
                         <constraint firstAttribute="trailing" secondItem="2so-B9-7Zm" secondAttribute="trailing" id="SpG-Sb-K2q"/>
                         <constraint firstItem="2so-B9-7Zm" firstAttribute="leading" secondItem="yd3-4s-8of" secondAttribute="leading" id="YR8-RY-oMb"/>
                         <constraint firstItem="2so-B9-7Zm" firstAttribute="leading" secondItem="yd3-4s-8of" secondAttribute="leading" id="aI1-5V-2wa"/>
                         <constraint firstAttribute="trailing" secondItem="T8B-KY-Dvi" secondAttribute="trailing" id="gbS-YA-rZf"/>
                         <constraint firstItem="T8B-KY-Dvi" firstAttribute="top" secondItem="yd3-4s-8of" secondAttribute="top" id="hbx-9p-35G"/>
+                        <constraint firstItem="2so-B9-7Zm" firstAttribute="top" secondItem="T8B-KY-Dvi" secondAttribute="bottom" id="iGb-So-aNx"/>
                         <constraint firstAttribute="bottom" secondItem="2so-B9-7Zm" secondAttribute="bottom" id="p9P-Pg-pz3"/>
-                        <constraint firstItem="xJc-lS-glS" firstAttribute="leading" secondItem="yd3-4s-8of" secondAttribute="leading" id="rbx-LJ-9d4"/>
                         <constraint firstItem="T8B-KY-Dvi" firstAttribute="leading" secondItem="yd3-4s-8of" secondAttribute="leading" id="ttw-5K-JuX"/>
                         <constraint firstAttribute="trailing" secondItem="2so-B9-7Zm" secondAttribute="trailing" id="uck-ye-ru1"/>
                         <constraint firstAttribute="bottom" secondItem="2so-B9-7Zm" secondAttribute="bottom" id="vQ0-v4-0ku"/>
