--- a/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workbench/LSWorkbenchViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Workbench/Workbench/LSWorkbenchViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,6 +23,7 @@
                 <outlet property="btn9" destination="yut-hf-uw4" id="8zW-fl-I1u"/>
                 <outlet property="headBackHeight" destination="2iP-wn-l8r" id="HEw-6O-qh0"/>
                 <outlet property="headBackImageView" destination="z6O-VD-Gcl" id="4AV-4B-hWa"/>
+                <outlet property="sendWorkBtn" destination="eQl-34-5nh" id="jnr-2M-auK"/>
                 <outlet property="view" destination="iN0-l3-epB" id="H7W-8e-jMK"/>
             </connections>
         </placeholder>
@@ -207,7 +208,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J3T-O6-zBu">
-                            <rect key="frame" x="10" y="343.33333333333331" width="373" height="125"/>
+                            <rect key="frame" x="10" y="343.33333333333331" width="373" height="125.33333333333331"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EyG-KW-1F0">
                                     <rect key="frame" x="10" y="11" width="2" height="13"/>
@@ -224,7 +225,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Vk-Cy-F9E">
-                                    <rect key="frame" x="0.0" y="35.333333333333378" width="93.333333333333329" height="79.666666666666686"/>
+                                    <rect key="frame" x="0.0" y="35.333333333333371" width="93.333333333333329" height="80"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="预约查询" imagePlacement="top" imagePadding="5">
                                         <attributedString key="attributedTitle">
@@ -241,7 +242,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ID1-32-KCc">
-                                    <rect key="frame" x="93.333333333333343" y="35.333333333333378" width="93.333333333333343" height="79.666666666666686"/>
+                                    <rect key="frame" x="93.333333333333343" y="35.666666666666693" width="93.333333333333343" height="79.666666666666686"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="新增预约" imagePlacement="top" imagePadding="5">
                                         <attributedString key="attributedTitle">
@@ -257,12 +258,32 @@
                                         <action selector="jumpAddOrder:" destination="-1" eventType="touchUpInside" id="AVY-KZ-TXo"/>
                                     </connections>
                                 </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eQl-34-5nh">
+                                    <rect key="frame" x="186.66666666666666" y="35.333333333333371" width="92.999999999999972" height="80"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="派工" imagePlacement="top" imagePadding="5">
+                                        <attributedString key="attributedTitle">
+                                            <fragment content="派工">
+                                                <attributes>
+                                                    <font key="NSFont" size="14" name="PingFangSC-Regular"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <color key="baseForegroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </buttonConfiguration>
+                                    <connections>
+                                        <action selector="jumpSendWork:" destination="-1" eventType="touchUpInside" id="Kcf-8T-ACP"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstItem="3Vk-Cy-F9E" firstAttribute="width" secondItem="J3T-O6-zBu" secondAttribute="width" multiplier="1:4" id="0vc-Cm-gRz"/>
+                                <constraint firstItem="eQl-34-5nh" firstAttribute="height" secondItem="3Vk-Cy-F9E" secondAttribute="height" id="1YG-X9-anM"/>
                                 <constraint firstItem="3Vk-Cy-F9E" firstAttribute="top" secondItem="SLv-gr-vge" secondAttribute="bottom" constant="10" id="9lR-oW-HJO"/>
                                 <constraint firstItem="ID1-32-KCc" firstAttribute="centerY" secondItem="3Vk-Cy-F9E" secondAttribute="centerY" id="DKL-ug-ktk"/>
+                                <constraint firstItem="eQl-34-5nh" firstAttribute="leading" secondItem="ID1-32-KCc" secondAttribute="trailing" id="Enp-yF-EIK"/>
                                 <constraint firstAttribute="bottom" secondItem="3Vk-Cy-F9E" secondAttribute="bottom" constant="10" id="Jw5-tX-Odo"/>
                                 <constraint firstItem="3Vk-Cy-F9E" firstAttribute="leading" secondItem="J3T-O6-zBu" secondAttribute="leading" id="O5D-mp-bfa"/>
                                 <constraint firstItem="SLv-gr-vge" firstAttribute="leading" secondItem="EyG-KW-1F0" secondAttribute="trailing" constant="2" id="QnJ-TA-rJg"/>
@@ -271,6 +292,8 @@
                                 <constraint firstItem="SLv-gr-vge" firstAttribute="centerY" secondItem="EyG-KW-1F0" secondAttribute="centerY" id="ejA-MP-C6h"/>
                                 <constraint firstItem="ID1-32-KCc" firstAttribute="width" secondItem="3Vk-Cy-F9E" secondAttribute="width" id="jio-cr-aLl"/>
                                 <constraint firstItem="ID1-32-KCc" firstAttribute="leading" secondItem="3Vk-Cy-F9E" secondAttribute="trailing" id="sRr-xU-Uqb"/>
+                                <constraint firstItem="eQl-34-5nh" firstAttribute="width" secondItem="3Vk-Cy-F9E" secondAttribute="width" id="uNm-GK-m4m"/>
+                                <constraint firstItem="eQl-34-5nh" firstAttribute="centerY" secondItem="3Vk-Cy-F9E" secondAttribute="centerY" id="vhT-JF-KHF"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -288,7 +311,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pta-8b-l6W">
-                            <rect key="frame" x="10" y="478.33333333333326" width="373" height="125"/>
+                            <rect key="frame" x="10" y="478.66666666666674" width="373" height="125"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFE-mo-HGR">
                                     <rect key="frame" x="10" y="11" width="2" height="13"/>
@@ -299,7 +322,7 @@
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="考勤打卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DiP-4x-HF7">
-                                    <rect key="frame" x="14.000000000000004" y="9.6666666666666856" width="53.333333333333343" height="15.666666666666664"/>
+                                    <rect key="frame" x="14.000000000000004" y="9.6666666666666288" width="53.333333333333343" height="15.666666666666664"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -417,6 +440,7 @@
         <image name="我的钟数" width="41" height="41"/>
         <image name="技师排位" width="41" height="41"/>
         <image name="新增预约" width="41" height="41"/>
+        <image name="派工" width="44.5" height="44.5"/>
         <image name="预约查询" width="41" height="41"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
